clarify node vs index settings